[package]
name = "rust_dungeon_crawl"
version = "0.1.0"
authors = ["Gen Ichino <zenoplex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "0.8.1"
legion = "0.4.0"
ron = "0.6.4"
serde = "1.0.126"
